<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IndoorAtlas SDK Examples</string>
    <string name="action_clear">Clear</string>
    <string name="example_simple_title">01. Simple</string>
    <string name="example_simple_description">Demonstrates basic functionality, shows events as text entries.</string>
    <string name="example_imageview_title">02. ImageView</string>
    <string name="example_imageview_description">Demonstrates showing locations on a floor plan displayed with ImageView.</string>
    <string name="example_googlemaps_basic_title">03. Google Maps - Basic</string>
    <string name="example_googlemaps_basic_description">Demonstrates showing location on GoogleMap</string>
    <string name="example_googlemaps_overlay_title">04. Google Maps - Indoor-outdoor</string>
    <string name="example_googlemaps_overlay_geofencing_title">11. Geofences on Google Maps Overlay</string>
    <string name="example_googlemaps_overlay_description">Demonstrates showing location over a floor plan which is loaded as map overlay. Indoor-outdoor detection is enabled, automatically switches between IndoorAtlas and GPS</string>
    <string name="example_googlemaps_overlay_geofencing_description">Demonstrates showing location and setting Geofences over a floor plan which is loaded as map overlay. Indoor-outdoor detection is enabled, automatically switches between IndoorAtlas and GPS. Geofences work outdoors as well. </string>
    <string name="example_osm_overlay_title">10. Overlay with Open Street Map</string>
    <string name="example_osm_overlay_description">Maps overlay with Open Street Map</string>
    <string name="example_googlemaps_indoor_title">14. Google Indoor Maps</string>
    <string name="example_googlemaps_indoor_description">Demonstrates using IndoorAtlas locations on Google Indoor Maps</string>
    <string name="location_permission_request_title">Permission required</string>
    <string name="location_permission_request_rationale">Access to coarse location is required for faster first fix.</string>
    <string name="location_permission_denied_message">No access to locations. Time to first fix may be severely delayed!</string>
    <string name="storage_permission_denied_message">No access to external storage. Permission needed for displaying floor plans</string>
    <string name="storage_permission_denied_message_osm">No access to external storage. Permission needed for storing map tiles in the OSMDroid example.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="permission_button_accept">Sure</string>
    <string name="permission_button_deny">Deny</string>
    <string name="configuration_incomplete_title">Configuration incomplete</string>
    <string name="configuration_incomplete_message">API credentials needed, please see gradle.properties in project root level.</string>
    <string name="dialog_set_location_title">Set location</string>
    <string name="error_could_not_set_location">Error setting location: %s</string>
    <string name="action_share">Share...</string>
    <string name="share_dialog_title">Your shared name?</string>
    <string name="current_channel">Current channel: %s</string>
    <string name="error_loading_floor_plan">Error while loading floor plan</string>
    <string name="title_my_name">Me: %s</string>
    <string name="menu_set_channel">Set channel</string>
    <string name="channel_dialog_title">Channel name</string>
    <string name="error_setting_channel">Setting channel failed: %s</string>
    <string name="example_sharelocation_description">Demonstrates sharing ones location via 3rd party cloud service.</string>
    <string name="example_sharelocation_title">05. Location sharing</string>
    <string name="menu_change_color">Change color</string>
    <string name="example_credentials_title">06. Set credentials</string>
    <string name="example_credentials_description">Demonstrates setting credentials from code</string>
    <string name="dialog_request_options_title">Location request options</string>
    <string name="fastest_interval_label">Fastest interval (milliseconds)</string>
    <string name="shortest_displacement_label">Shortest displacement (meters)</string>
    <string name="default_label">use default</string>
    <string name="example_regions_description">Demonstrates automatic region transitions and vertical position information</string>
    <string name="example_regions_title">07. Regions</string>
    <string name="region_information">Region information</string>
    <string name="venue_outside">Outside mapped area</string>
    <string name="venue_inside">In venue</string>
    <string name="floor_plan_outside">No floor plan</string>
    <string name="floor_level">Floor level</string>
    <string name="floor_certainty_percentage">Certainty: %.1f %%</string>

    <!-- Background example -->
    <string name="example_background_description">Demonstrates running IndoorAtlas location service in the background</string>
    <string name="example_background_title">08. Background mode</string>
    <string name="button_start_background">Request location updates</string>
    <string name="button_stop_background">Remove location updates</string>
    <string name="button_share_background">Share events</string>
    <string name="text_background_received">Last received location: %s</string>
    <string name="button_reset_background">Clear stored events</string>
    <string name="text_background_example">Request location updates with a PendingIntent. Updates are received by an IntentService that stores them to a file. Note that you can leave the application and still receive updates. </string>

    <!-- Orientation example -->
    <string name="example_orientation_description">Demonstrates displaying the 3D orientation of the device. Panorama image credit: ESO (Very Large Telescope ready for action)</string>
    <string name="example_orientation_title">09. Orientation</string>
    <string name="text_bearing_initial">Bearing: no updates</string>
    <string name="text_bearing">Bearing: %1$5.1f\u00b0</string>
    <string name="text_heading_initial">Heading: no updates</string>
    <string name="text_heading">Heading: %1$5.1f\u00b0</string>
    <string name="text_orientation_initial">Orient.: no updates</string>
    <string name="text_orientation">Yaw: %1$5.2f, Pitch: %2$5.2f, Roll: %3$5.2f</string>

    <!-- Geofence example -->
    <string name="example_geofence_description">Demonstrates usage of geofences in IndoorAtlas SDK</string>
    <string name="example_geofence_title">11. Geofences</string>

    <!-- Radio and location settings example -->
    <string name="example_location_settings_title">12. Device radio and location settings</string>
    <string name="example_location_settings_description">Shows how to verify Bluetooth, WiFi and location settings</string>
    <string name="text_location_settings_example">Example on how to verify current WiFi, Bluetooth and location mode settings for optimal localization performance.</string>
    <string name="button_check_wifi_setting">Check WiFi background scanning</string>
    <string name="button_check_bt_setting">Check Bluetooth status</string>
    <string name="button_check_location_mode">Check location mode</string>
    <string name="bt_not_supported">Bluetooth is not supported on this hardware platform</string>
    <string name="bt_enabled">Bluetooth is enabled</string>
    <string name="bt_denied">User denied use of bluetooth</string>
    <string name="wifi_not_supported">WiFi is not supported on this hardware platform</string>
    <string name="wifi_background_scanning_enabled">WiFi background scanning is enabled</string>
    <string name="wifi_background_scanning_denied">User denied WiFi background scanning</string>
    <string name="location_provider_available">Location provider enabled</string>

    <string name="example_wayfinding_description">Demonstrates usage of IndoorAtlas Wayfinding &amp; PoIs</string>
    <string name="example_wayfinding_title">13. Wayfinding &amp; PoIs</string>

    <string name="example_foregroundservice_description">Demonstrates IndoorAtlas background positioning using a foreground service.</string>
    <string name="example_foregroundservice_title">15. Foreground Service</string>

    <string name="example_lockfloor_description">Demonstrates how locking positioning to specific floor or indoors is achieved.</string>
    <string name="example_lockfloor_title">16. Lock floor and Indoors </string>


</resources>
