<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.indooratlas.android.sdk.examples.background.BackgroundActivity">

    <TextView
        android:id="@+id/text_info"
        android:text="@string/text_background_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_start"
        android:text="@string/button_start_background"
        android:onClick="onStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_info"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_stop"
        android:text="@string/button_stop_background"
        android:onClick="onStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_start"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_share"
        android:text="@string/button_share_background"
        android:onClick="onShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_stop"
        android:layout_margin="4dp"/>

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_share"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_reset"
        android:text="@string/button_reset_background"
        android:onClick="onReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"/>

</RelativeLayout>
