<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.indooratlas.android.sdk.examples.locationsettings.LocationSettingsActivity">

    <TextView
        android:id="@+id/text_info"
        android:text="@string/text_location_settings_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_check_wifi_setting"
        android:text="@string/button_check_wifi_setting"
        android:onClick="onCheckWiFiBackgroundScanning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_info"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_check_bt_setting"
        android:text="@string/button_check_bt_setting"
        android:onClick="onCheckBluetoothStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_check_wifi_setting"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/button_check_location_setting"
        android:text="@string/button_check_location_mode"
        android:onClick="onCheckLocationMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_check_bt_setting"
        android:layout_margin="4dp"/>

</RelativeLayout>
