<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_orientation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.indooratlas.android.sdk.examples.orientation.OrientationActivity">

    <TextView
        android:id="@+id/text_orientation"
        android:text="@string/text_orientation_initial"
        android:typeface="monospace"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/text_heading"
        android:text="@string/text_heading_initial"
        android:typeface="monospace"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_orientation"/>

    <TextView
        android:id="@+id/text_bearing"
        android:text="@string/text_bearing_initial"
        android:typeface="monospace"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_heading"/>

</RelativeLayout>
